--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100..900&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  html {
+    font-family: "Noto Sans KR", sans-serif;
+    @apply text-text-primary;
   }
 }
